se restructuro la forma de habilidades y su ejecucion se hace desde juego usando una interfaz depormedio para usarlo en habilidades